# number-conversion-rs

./: AI_README.md  Cargo.toml  README.md
.cargo/: config.toml
config/: default.toml
scripts/: calc_engine.py
src/: ascii_hex.rs  base10.rs  base16.rs  base16_2.rs  base2.rs  base2_16.rs  base32_f32.rs  basef32_32.rs  bit_viewer.rs  data.rs  hex_ascii.rs  lib.rs  main.rs
src/app/: application.rs  config.rs  mod.rs
src/backend/: messages.rs  mod.rs  worker.rs
src/core/: bit_ops.rs  calc_engine.rs  errors.rs  mod.rs  validators.rs
src/core/converters/: base_converter.rs  float_converter.rs  mod.rs  text_converter.rs
src/core/models/: bit_data.rs  conversion_data.rs  mod.rs
src/frontend/: mod.rs  state.rs
src/ui/: mod.rs
src/ui/components/: converter_panel.rs  feedback.rs  mod.rs  navigation.rs
src/ui/pages/: bit_viewer.rs  calculator.rs  mod.rs  number_conversion.rs  text_conversion.rs
src/ui/pages/calculator/: mod.rs
src/utils/: formatting.rs  mod.rs  validation.rs
