[package]
name = "number_conversion"
version = "0.2.0"
edition = "2021"
authors = ["AnlangA <70180737+AnlangA@users.noreply.github.com>"]
description = "一个用Rust和egui构建的跨平台编码转换工具，支持多种进制转换、文本编码转换和位操作查看"
homepage = "https://github.com/AnlangA/number-conversion-rs"
repository = "https://github.com/AnlangA/number-conversion-rs"
license = "MIT"
keywords = ["encoding", "conversion", "gui", "egui", "binary"]
categories = ["command-line-utilities", "gui", "encoding"]
readme = "README.md"

[dependencies]
eframe = "0.32.0"
env_logger = "0.11.3"
num = "0.4.3"
egui_extras = { version = "0.32.0", features = ["all_loaders"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
